[package]
name = "yaay-example"
version = "0.1.0"
authors = ["Fugoes <fugoes.qa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaay-mt-runtime = { path = "../yaay-mt-runtime" }
parking_lot_core = "0.7.*"

[[bin]]
name = "wrong-futures"
path = "src/wrong-futures.rs"

[[bin]]
name = "perf"
path = "src/perf.rs"
