[package]
name = "yaay-mio"
version = "0.1.0"
authors = ["Fugoes <fugoes.qa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.6.*"
slab = "0.4.*"
iovec = "0.1.4"
httparse = "1.3.4"
parking_lot = "0.10.*"
yaay-runtime-api = { path = "../yaay-runtime-api" }
