[package]
name = "yaay-tests"
version = "0.1.0"
authors = ["Fugoes <fugoes.qa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaay-runtime-api = { path = "../yaay-runtime-api" }
yaay-mt-runtime = { path = "../yaay-mt-runtime" }
yaay-mio = { path = "../yaay-mio" }

#[[bin]]
#name = "concurrent_wakeup"
#path = "src/concurrent_wakeup.rs"

[[bin]]
name = "mio"
path = "src/mio.rs"
