[package]
name = "yaay-tests"
version = "0.1.0"
authors = ["Fugoes <fugoes.qa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaay-runtime-api = { path = "../yaay-runtime-api" }
yaay-mt-runtime = { path = "../yaay-mt-runtime" }
yaay-mio = { path = "../yaay-mio" }
mio = "0.6.*"
bencher = "0.1.5"
tokio = { version = "0.2", features = ["full"] }
parking_lot = "0.10.*"

[[bin]]
name = "concurrent_wakeup"
path = "src/concurrent_wakeup.rs"

[[bin]]
name = "mio_ping_pong"
path = "src/mio_ping_pong.rs"

[[bin]]
name = "spawn_defer_bench"
path = "src/spawn_defer_bench.rs"

[[bin]]
name = "tokio_ping_pong"
path = "src/tokio_ping_pong.rs"

[[bin]]
name = "mio_empty"
path = "src/mio_empty.rs"

[[bin]]
name = "tokio_empty"
path = "src/tokio_empty.rs"

[[bin]]
name = "mutex_and_faa"
path = "src/mutex_and_faa.rs"
